# envelope

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
cmake/: catch2.cmake  eigen.cmake  lbfgs.cmake  pybind11.cmake  rapidjson.cmake
data/: Berkeley.csv  NJdata.csv  amitriptyline.csv  concrete.csv  fiberpaper.csv  horseshoecrab.csv  sales.csv  vehicles.csv  wheatprotein.csv
docs/: envlp01_guide.ipynb  envlp02_regression.ipynb
envlp/: CMakeLists.txt
envlp/include/envelope/: eigen_types.hpp  envopt.hpp  gram.hpp  la_util.hpp  mat_util.hpp  regression.hpp  regression_env.hpp
envlp/src/: CMakeLists.txt  envopt.cpp  gram.cpp  la_util.cpp  regression.cpp  regression_env.cpp
envlp/tests/: CMakeLists.txt  envopt_test.cpp  lau_test.cpp  lbfgs_test.cpp  main.cpp  regression_env_test.cpp  test.dep  test_util.hpp
envlp/tests/data/: waterstrider.csv
pyenvlp/: CMakeLists.txt
pyenvlp/python/: fit.py
pyenvlp/scripts/: CMakeLists.txt  envlp_proto.py
pyenvlp/src/: CMakeLists.txt  pyenvlp.cpp
pyenvlp/src/pyenvlp/: __init__.py  lau.py  opt.py  pyenvlp.cpp  pyenvlp.dep  pyenvlp.hpp  pyenvlp_module.cpp
pyenvlp/tests/: CMakeLists.txt  test_envlp.py
